bug: fix image stretch

--- a/components/Photos/photo.scss
+++ b/components/Photos/photo.scss
@@ -20,6 +20,7 @@
 
     img {
         margin-bottom: 0;
+        object-fit: cover;
     }
 }
 
